styled buttons + added trips illustration

--- a/style.css
+++ b/style.css
@@ -175,14 +175,22 @@ body {
 .tripImg {
   width: 300px;
 }
-
+.tripsDeco {
+  height: auto;
+  width: 220px;
+  position: absolute;
+  margin-top: 130px;
+  margin-left: 50px;
+}
 .readMoreTrip {
   justify-self: self-end;
   margin-bottom: 20px;
-  background-color: white;
-  color: var(--dark-blue);
-  border: solid 1px var(--dark-blue);
+  background-color: var(--light-blue);
+  color: #fff;
+  border: solid 1px var(--light-blue);
+  border-radius: 5px;
   cursor: pointer;
+  padding: 10px 20px;
 }
 /* trip table */
 #tableHeader {
