--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ input#terms {
 
 .toReceipt {
   position: absolute;
-  bottom: 1%;
+  bottom: 20%;
 }
 /* ------------ booking forms ----------- */
 .show {
@@ -865,10 +865,12 @@ input#terms {
   background: var(--light-blue);
   border: none;
   color: #fff;
-  padding: 50px;
+  padding: 70px 35px;
   margin: 15% auto; /* 15% from the top and centered */
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 30%; /* Could be more or less, depending on screen size */
   text-align: justify;
+  border-radius: 10px;
+  box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
 }
 .fullDescription,
 .coronaText {
@@ -884,7 +886,7 @@ input#terms {
   border: none;
   color: lightgray;
   float: right;
-  margin-top: -30px;
+  margin-top: -40px;
 }
 .corona-modal-close:hover,
 .corona-modal-close:focus,
