--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
   font-family: "Brandon Text Thin";
   src: url("fonts/BrandonText-Thin.otf") format("woff");
 }
+@font-face {
+  font-family: "Font Awesome 5";
+  src: url("fonts/Font-Awesome-5-Free-Regular-400.otf") format("woff");
+}
 
 /* --------- VARIABLES -------- */
 :root {
@@ -286,7 +290,7 @@ body {
   max-width: fit-content;
   border: 1px solid var(--dark-blue);
   border-radius: 10px;
-  box-shadow: 0 3px 10px 3px #000;
+  box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
   color: black;
   background-color: white;
   transition: transform 0.5s;
@@ -380,7 +384,7 @@ body {
   transition: background 0.3s ease-in-out;
 }
 .top-banner form .weatherBtn:hover {
-  background: var(--darkred);
+  background: var(--dark-blue);
 }
 .top-banner form .msg {
   position: absolute;
@@ -872,6 +876,9 @@ input#terms {
   border-radius: 10px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
 }
+#payment-modal-content {
+  width: 50%;
+}
 .fullDescription,
 .coronaText {
   font-family: "Brandon Text Light";
@@ -906,9 +913,200 @@ input#terms {
   color: #fff;
 }
 
-/* payment forms */
-.paymentRow {
+/* payment form */
+.paymentContainer a {
+  color: #28333b;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(64, 179, 255, 0.5);
+  opacity: 0.75;
+  transition: all 0.5s ease;
+}
+.paymentContainer a:hover {
+  border-bottom: 2px solid #40b3ff;
+  opacity: 1;
+}
+.field {
+  margin-bottom: 25px;
+}
+.field.full {
+  width: 100%;
+}
+.field.half {
+  width: calc(50% - 12px);
+}
+.field label {
+  display: block;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-bottom: 8px;
+}
+.field input {
+  padding: 12px;
+  border-radius: 6px;
+  border: 2px solid #e8ebed;
+  display: block;
+  font-size: 14px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.field input:placeholder {
+  color: #e8ebed;
+}
+.flex {
   display: flex;
+  flex-direction: row wrap;
+  align-items: center;
+}
+.flex.justify-space-between {
+  justify-content: space-between;
+}
+.card {
+  padding: 0 50px;
+  max-width: 850px;
+  background: inherit;
+  box-sizing: border-box;
+}
+.card .container {
+  max-width: 700px;
+  margin: 0 auto;
+}
+.card .card-title {
+  margin-bottom: 50px;
+}
+.card .card-title h2 {
+  margin: 0;
+}
+.card .card-body .payment-type h4 {
+  margin: 0;
+}
+.card .card-body .payment-type .types {
+  margin: 25px 0;
+}
+.card .card-body .payment-type .types .type {
+  width: 30%;
+  position: relative;
+  background: #f2f4f7;
+  border: 2px solid #e8ebed;
+  padding: 25px;
+  box-sizing: border-box;
+  border-radius: 6px;
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+.card .card-body .payment-type .types .type:hover {
+  border-color: #28333b;
+}
+.card .card-body .payment-type .types .type:hover .logo,
+.card .card-body .payment-type .types .type:hover p {
+  color: #28333b;
+}
+.card .card-body .payment-type .types .type.selected {
+  border-color: #40b3ff;
+  background: lightblue;
+}
+.card .card-body .payment-type .types .type.selected .logo {
+  color: #40b3ff;
+}
+.card .card-body .payment-type .types .type.selected p {
+  color: #28333b;
+}
+.card .card-body .payment-type .types .type.selected::after {
+  content: "\2713";
+  font-weight: 900;
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: -21px;
+  right: -21px;
+  color: #000;
+  background: lightblue;
+  border: 2px solid #40b3ff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card .card-body .payment-type .types .type .logo,
+.card .card-body .payment-type .types .type p {
+  transition: all 0.5s ease;
+}
+.card .card-body .payment-type .types .type .logo {
+  font-size: 48px;
+  color: #8a959c;
+  margin: auto;
+}
+.card .card-body .payment-type .types .type p {
+  margin-bottom: 0;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  color: #8a959c;
+}
+.card .card-body .payment-info .column {
+  width: calc(50% - 25px);
+  margin-top: 35px;
+}
+#cc.column.shipping {
+  margin-top: -75px;
+}
+.card .card-body .payment-info .title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.card .card-body .payment-info .title .num {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  border: 2px solid #40b3ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-right: 12px;
+  font-size: 12px;
+}
+.card h4 {
+  margin-bottom: 10px;
+}
+.toReceipt {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  padding: 15px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  border: 2px solid transparent;
+  background: lightblue;
+  border: 2px solid #e8ebed;
+  color: #000;
+  position: absolute;
+  right: 29%;
+  bottom: -25%;
+}
+.toReceipt:hover {
+  background: var(--dark-blue);
+}
+
+/* receipt */
+.receipt {
+  color: #fff;
+  text-align: center;
+}
+.receipt h5,
+.receipt h3,
+.receipt p {
+  margin-bottom: 15px;
+}
+.receipt h3 {
+  margin-top: 30px;
+}
+.receipt p {
+  font-family: "Brandon Text Light";
 }
 
 /* -------- GALLERY ------- */
