--- a/style.css
+++ b/style.css
@@ -100,13 +100,14 @@ background-position: bottom;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999;
+  z-index: 1;
 }
 
 .video-container {
   width: 100%;
   height: 100%;
   /* filter: contrast(80%); */
+  filter: brightness(0.6);
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
 }
 
@@ -127,7 +128,7 @@ background-position: bottom;
   color: #fff;
   margin: 0;
   text-align: center;
-  box-shadow: 0 1px 35px 5px rgba(0, 0, 0, 0.4);
+  /* box-shadow: 0 1px 35px 5px rgba(0, 0, 0, 0.4); */
 }
 
 /* --------- INTRO -------- */
@@ -140,6 +141,10 @@ background-position: bottom;
   padding: 30px 300px 70px 300px;
 }
 
+#introText {
+  position: absolute;
+    top: 40%;
+}
 /* --------- TRIPS -------- */
 #tripArea {
   display: inline-flex;
@@ -148,7 +153,13 @@ background-position: bottom;
   width: 80px;
   height: auto;
   margin: 40px;
+  animation: rotate 3s linear infinite; 
 }
+
+@keyframes rotate{
+  to{ transform: rotate(360deg); }
+}
+
 #singleTripArea {
   display: grid;
   align-items: center;
@@ -279,8 +290,9 @@ background-position: bottom;
   color: var(--yellow);
   border: 1px solid var(--yellow);
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   cursor: pointer;
+  max-width: max-content;
 }
 .anchor {
   width: 80px;
@@ -327,6 +339,10 @@ background-position: bottom;
 /* COVID */
 #corona {
   padding-top: 50px;
+  display: flex;
+  align-items: center;
+  place-content: center;
+  flex-flow: column-reverse;
 }
 
 /* -------- WEATHER ------- */
@@ -937,14 +953,14 @@ select:after {
 #corona-modal-content,
 #trip-modal-content,
 #payment-modal-content {
-  background: var(--light-blue);
+  background: white;
   border: none;
-  color: #fff;
+  color: var(--dark-blue);;
   padding: 50px 35px;
   margin: 15% auto; /* 15% from the top and centered */
-  width: 30%; /* Could be more or less, depending on screen size */
+  width: 60%; /* Could be more or less, depending on screen size */
   text-align: justify;
-  border-radius: 10px;
+  border-radius: 3px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
 }
 #payment-modal-content {
