--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ body {
 }
 
 /* --------- TOP NAV -------- */
-#topNavigation,
+/* #topNavigation, */
 #bottomNavigation {
-  /* background-color: var(--light-beige); */
-  margin: 10px;
+  background-color: var(--light-beige);
+  color: var(--dark-blue);
+  /* margin: 10px; */
   /* box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2); */
 }
 #topNavigation {
@@ -69,31 +70,31 @@ body {
 #navBar {
   display: flex;
   align-items: center;
-  margin: 5px;
+  margin: 20px;
 }
 .navBarContent {
   display: flex;
   margin-inline-start: auto;
 }
 #navBar a {
-  color: var(--light-beige);
+  color: white;
   font-family: var(--main-font);
   text-decoration: none;
   margin: 10px;
-  font-size: 24px;
+  font-size: 16px;
 }
 #navBar a:hover {
   border-bottom: 4px solid var(--dark-blue);
 }
 
 .addImage {
-background-image: url("http://pbstyle.dk/wpinstall/wordpress/wp-content/uploads/2020/11/Copenhagen-Canal-tour-havnerundfart-og-kanalrundfart-i-kobenhavn-boat-tour-copenhagen-Hey-Captain-20.jpg");
+background-image: url("http://pbstyle.dk/wpinstall/wordpress/wp-content/uploads/2020/12/boatCut.jpg");
 background-position: bottom;
 }
 
 /* --------- HERO SECTION -------- */
 .banner {
-  width: 40%;
+  width: 20%;
   height: auto;
   text-align: center;
   position: absolute;
@@ -101,6 +102,8 @@ background-position: bottom;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+  filter: drop-shadow(2px 4px 6px black);
+  opacity: 0.3;
 }
 
 .video-container {
@@ -134,26 +137,31 @@ background-position: bottom;
 /* --------- INTRO -------- */
 .introTitle {
   text-transform: uppercase;
-  padding-top: 70px;
+  padding-top: 30px;
+  font-size: 14px;
 }
 .introText {
   font-family: "Brandon Text Light";
-  padding: 30px 300px 70px 300px;
+  font-size: 14px;
 }
 
 #introText {
   position: absolute;
     top: 40%;
+    padding: 0 230px;
+    letter-spacing: 0.1em;
+    text-align: center;
 }
 /* --------- TRIPS -------- */
 #tripArea {
   display: inline-flex;
+  font-size: 12px;
 }
 .wheel {
   width: 80px;
   height: auto;
   margin: 40px;
-  animation: rotate 3s linear infinite; 
+  animation: rotate 3s linear infinite;
 }
 
 @keyframes rotate{
@@ -173,53 +181,54 @@ background-position: bottom;
   transform: scale3d(1.05, 1.05, 1);
 }
 .tripTitle {
-  font-size: 16px;
+  font-size: 12px;
+  margin: 0;
   text-align: center;
   font-family: "Brandon Text Light";
-  margin: 20px 0;
 }
 .tripText {
   font-family: "Brandon Text Light";
-  margin: 20px 0;
-  text-align: justify;
+  font-size: 12px;
+  text-align: left;
 }
 .duration {
-  margin-bottom: 20px;
   font-size: 12px;
+  margin: 0;
   font-family: "Brandon Text Bold";
 }
 #trips {
-  margin: 0;
   text-align: center;
-  margin: 50px;
+  margin-top: 50px;
 }
 .tripImg {
-  width: 300px;
+  width: 250px;
 }
 .tripsDeco {
   height: auto;
-  width: 220px;
+  width: 120px;
   position: absolute;
-  margin-top: 130px;
-  margin-left: 50px;
+  margin-top: 60px;
 }
 .readMoreTrip {
   justify-self: self-end;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: var(--light-blue);
   color: #fff;
   border: solid 1px var(--light-blue);
   border-radius: 5px;
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 8px 15px;
+  font-size: 12px;
 }
 /* trip table */
 #tableHeader {
   display: flex;
-  width: 300px;
-  justify-content: space-between;
+  width: inherit;
+  justify-content: space-around;
   color: white;
   background-color: var(--dark-blue);
+  height: 40px;
+  align-items: center;
 }
 
 #lemonade_water,
@@ -231,25 +240,36 @@ background-position: bottom;
   flex-direction: row;
   display: flex;
   place-content: space-between;
+  height: 40px;
+  align-items: center;
+  padding: 0 50px;
 }
 
-#summerWinter p {
-  padding: 10px;
-}
+/* #summerWinter p {
+
+} */
 
 #totalPrice {
   background-color: var(--light-beige);
   min-width: -webkit-fill-available;
   text-align: right;
+  text-align: -webkit-center;
 }
 
 #totalPrice p {
-  padding: 10px;
+  padding: 0;
+  height: 30px;
+  align-items: center;
 }
 
 #tripSection {
   position: relative;
   display: inline-flex;
+  font-size: 12px;
+}
+
+#customiseYourOwn {
+  font-size: 12px;
 }
 
 #tableGuide {
@@ -257,12 +277,16 @@ background-position: bottom;
 }
 
 #tableGuide p {
-  padding: 11px 50px;
+  padding: 0;
   text-align: left;
+  margin: 0;
+  height: 39px;
+  font-size: 12px;
 }
 
 #tableGuide :nth-last-child(-n + 2) {
   background-color: var(--light-beige);
+  padding: 5px;
 }
 
 .iconSize {
@@ -282,10 +306,9 @@ background-position: bottom;
 /* --------- TOURS -------- */
 #tourArea {
   display: inline-flex;
-  margin: 50px 0 100px 0;
+  margin: 300 0 30px 0px;
 }
 .corona-guidelines {
-  text-transform: uppercase;
   margin: 30px 500px;
   color: var(--yellow);
   border: 1px solid var(--yellow);
@@ -295,19 +318,21 @@ background-position: bottom;
   max-width: max-content;
 }
 .anchor {
-  width: 80px;
+  width: 70px;
   height: auto;
-  margin-top: 30px;
+  filter: drop-shadow(2px 4px 6px black);
+  display: flex;
+  margin: auto;
 }
 
 #singleTourArea {
   display: flex;
-  margin: 40px;
+  margin: 0 40px;
   flex-direction: column;
   align-items: center;
   max-width: fit-content;
   border: 1px solid var(--dark-blue);
-  border-radius: 10px;
+  border-radius: 6px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
   color: black;
   background-color: white;
@@ -320,25 +345,26 @@ background-position: bottom;
 }
 
 .tourTitle {
-  padding: 20px;
   font-family: "Brandon Text Thin";
+  font-size: 14px;
 }
 .tourText {
   font-family: "Brandon Text Light";
-  padding: 20px;
-  padding-top: 0;
-  text-align: justify;
+  padding: 0 20px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 12px;
 }
 #tours {
   padding-top: 10px;
 }
 .tourImg {
-  width: 350px;
+  width: 300px;
+  border-radius: 5px 5px 0 0;
 }
 
 /* COVID */
 #corona {
-  padding-top: 50px;
   display: flex;
   align-items: center;
   place-content: center;
@@ -376,7 +402,7 @@ background-position: bottom;
 }
 .heading {
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 18px;
   letter-spacing: 0.02em;
   padding: 0 0 30px 0;
 }
@@ -386,8 +412,6 @@ background-position: bottom;
   align-items: center;
 }
 .top-banner form .weatherInput {
-  font-size: 2rem;
-  height: 30px;
   padding: 5px 5px 10px;
   border-bottom: 1px solid;
 }
@@ -395,15 +419,15 @@ background-position: bottom;
   color: currentColor;
 }
 .top-banner form .weatherBtn {
-  font-size: 1rem;
+  font-size: 12px;
   font-weight: bold;
   letter-spacing: 0.1em;
-  padding: 15px 20px;
+  padding: 10px 20px;
   margin-left: 15px;
   border-radius: 5px;
   background: var(--light-blue);
   color: #fff;
-  transition: background 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 .top-banner form .weatherBtn:hover {
   background: var(--dark-blue);
@@ -687,25 +711,26 @@ background-position: bottom;
 .overlay {
   width: 0;
   position: inherit;
-  top: 40%;
   bottom: 0;
   right: 0;
   background-color: #fff;
   transition: 0.8s;
 }
 .showOverlay {
-  width: 30%;
-  height: 60%;
+  width: 15%;
+    height: fit-content;
+    bottom: 0;
 }
 .overlay-content {
   position: relative;
   text-align: center;
-  margin-top: 50px;
-  padding: 0 25%;
+  margin-top: 5px;
+  font-size: 12px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 }
 .newsletterTitle,
 .newsletterText {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .makeBold {
@@ -725,10 +750,10 @@ background-position: bottom;
 }
 
 label {
-  font-size: 20px;
+  font-size: 12px;
   text-align: left;
   display: block;
-  margin: 10px;
+  margin: 0;
   color: var(--dark-blue);
   font-family: "Roboto", sans-serif;
 }
@@ -739,7 +764,6 @@ select {
   /* width: 80%; */
   /* margin-top: 10px; */
   border: 1px solid #fff;
-  font-size: 18px;
   text-align-last: center;
   /* border-radius: 10px; */
   /* box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15); */
@@ -751,13 +775,14 @@ select:focus {
 .formLabel {
   border: 1px solid #fff;
   background: #fff;
-  margin-right: 3px;
+  margin-right: 1px;
   box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
   flex-direction: column;
   display: flex;
   flex-flow: column;
   text-align-last: center;
-  height: 70px;
+  height: 40px;
+  padding: 4px;
 }
 
 .formLabel p {
@@ -798,7 +823,7 @@ select:focus {
  color: white;
 }
 /* .formLabel:nth-last-of-type(-n+2) label{
-} 
+}
 
 input#terms {
   border: none;
@@ -816,8 +841,18 @@ input#terms {
   margin-right: 5px;
   color: #fff;
 }
+*/
+
+
+.keywords {
+  margin: 0 0 4px 0;
+  font-size: 12px;
+  font-family: "Brandon Text Light";
+}
 
 /* ------------ buttons ----------- */
+
+
 #expandFaq {
   text-transform: uppercase;
   padding: 10px 30px;
@@ -833,7 +868,6 @@ input#terms {
   margin-right: 0;
   /* text-transform: uppercase; */
   font-size: 12px;
-  font-weight: 900;
   padding: 5px 15px;
   background: #fff;
   border: none;
@@ -841,7 +875,6 @@ input#terms {
   color: var(--dark-blue);
   cursor: pointer;
   background: var(--yellow);
-  font-size: 20px;
 }
 
 .toReceipt {
@@ -857,7 +890,7 @@ input#terms {
   background: inherit; */
   color: white;
   position: absolute;
-  top: 70%;
+  top: 80%;
   z-index: 999999;
   transition: ease 1s;
 }
@@ -870,7 +903,7 @@ select:after {
 }
 
 .availability {
-  padding: 20px;
+  padding: 10px;
   display: flex;
   position: fixed;
   margin: 20px;
@@ -881,7 +914,7 @@ select:after {
   /* max-width: max-content; */
   /* max-width: fit-content; */
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
-  background: rgba(42, 49, 65, 0.9);
+  background: rgba(42, 49, 65, 1);
   width: min-content;
   left: 0;
   right: 0;
@@ -916,7 +949,7 @@ select:after {
 }
 .error {
   background-color: var(--dark-blue);
-  border: 2px solid red;
+  border: 1px solid red;
   padding: 4px;
   margin: 0;
   z-index: 10;
@@ -928,6 +961,7 @@ select:after {
 .displayError {
   display: flex;
     align-self: flex-end;
+    font-size: 12px;
 }
 
 /* modals */
@@ -958,7 +992,7 @@ select:after {
   color: var(--dark-blue);;
   padding: 50px 35px;
   margin: 15% auto; /* 15% from the top and centered */
-  width: 60%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
   text-align: justify;
   border-radius: 3px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
