--- a/style.css
+++ b/style.css
@@ -254,11 +254,12 @@ body {
 #tableHeader {
   display: flex;
   width: inherit;
-  justify-content: space-around;
+  justify-content: space-between;
   color: white;
   background-color: var(--dark-blue);
   height: 30px;
   align-items: center;
+  padding: 0 10px;
 }
 
 #lemonade_water,
@@ -272,7 +273,7 @@ body {
   place-content: space-between;
   height: 30px;
   align-items: center;
-  padding: 0 50px;
+  border: solid 0.1px whitesmoke;
 }
 
 /* #summerWinter p {
