--- a/style.css
+++ b/style.css
@@ -906,7 +906,6 @@ input#terms {
 }
 
 /* ------------ buttons ----------- */
-
 #expandFaq {
   text-transform: uppercase;
   padding: 10px 30px;
@@ -1008,15 +1007,14 @@ select:after {
   display: inline-flex;
 }
 /* ------------ custom validation ----------- */
-.valid {
+/* .valid {
   border: 2px solid green;
-}
+} */
 .invalid {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
 .error {
-  /* background-color: var(--dark-blue); */
   background: rgba(0, 0, 0, 0.5);
   padding: 4px;
   margin: 0;
@@ -1024,6 +1022,9 @@ select:after {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   display: none;
+}
+.paymentForm .error {
+  background: inherit;
 }
 .error::before {
   content: "❗";
@@ -1101,18 +1102,18 @@ select:after {
 .billingInfo,
 .ccInfo {
   font-family: "Brandon Text Light";
-  color: #fff;
+  color: #000;
 }
 
 /* payment form */
-.paymentContainer a {
+.paymentForm a {
   color: #28333b;
   text-decoration: none;
   border-bottom: 2px solid rgba(64, 179, 255, 0.5);
   opacity: 0.75;
   transition: all 0.5s ease;
 }
-.paymentContainer a:hover {
+.paymentForm a:hover {
   border-bottom: 2px solid #40b3ff;
   opacity: 1;
 }
@@ -1130,15 +1131,19 @@ select:after {
   text-transform: uppercase;
   font-size: 12px;
   margin-bottom: 8px;
+  text-align-last: left;
 }
-.field input {
-  /* padding: 12px; */
-  border-radius: 6px;
-  border: 2px solid #e8ebed;
+.paymentForm .field input {
+  margin-top: -2px;
   display: block;
   font-size: 14px;
   width: 100%;
   box-sizing: border-box;
+  text-align-last: left;
+}
+.paymentForm .formLabel {
+  text-align-last: left;
+  padding: 10px;
 }
 .field input:placeholder {
   color: #e8ebed;
@@ -1151,29 +1156,34 @@ select:after {
 .flex.justify-space-between {
   justify-content: space-between;
 }
-.card {
+/* .card {
   padding: 0 50px;
   max-width: 850px;
   background: inherit;
   box-sizing: border-box;
-}
-.card .container {
+} */
+.paymentForm {
   max-width: 700px;
   margin: 0 auto;
 }
-.card .card-title {
+.paymentForm .formLabel {
+  box-shadow: none;
+  border: 3px solid #e8ebed;
+  border-radius: 5px;
+}
+/* .card .card-title {
   margin-bottom: 50px;
 }
 .card .card-title h2 {
   margin: 0;
-}
-.card .card-body .payment-type h4 {
+} */
+.paymentForm .payment-type h4 {
   margin: 0;
 }
-.card .card-body .payment-type .types {
+.paymentForm .payment-type .types {
   margin: 25px 0;
 }
-.card .card-body .payment-type .types .type {
+.paymentForm .payment-type .types .type {
   width: 30%;
   position: relative;
   background: #f2f4f7;
@@ -1185,24 +1195,24 @@ select:after {
   text-align: center;
   transition: all 0.5s ease;
 }
-.card .card-body .payment-type .types .type:hover {
+.paymentForm .payment-type .types .type:hover {
   border-color: #28333b;
 }
-.card .card-body .payment-type .types .type:hover .logo,
-.card .card-body .payment-type .types .type:hover p {
+.paymentForm .payment-type .types .type:hover .logo,
+.paymentForm .payment-type .types .type:hover p {
   color: #28333b;
 }
-.card .card-body .payment-type .types .type.selected {
+.paymentForm .payment-type .types .type.selected {
   border-color: #40b3ff;
   background: lightblue;
 }
-.card .card-body .payment-type .types .type.selected .logo {
+.paymentForm .payment-type .types .type.selected .logo {
   color: #40b3ff;
 }
-.card .card-body .payment-type .types .type.selected p {
+.paymentForm .payment-type .types .type.selected p {
   color: #28333b;
 }
-.card .card-body .payment-type .types .type.selected::after {
+.paymentForm .payment-type .types .type.selected::after {
   content: "\2713";
   font-weight: 900;
   position: absolute;
@@ -1210,7 +1220,7 @@ select:after {
   width: 40px;
   top: -21px;
   right: -21px;
-  color: #000;
+  color: #fff;
   background: lightblue;
   border: 2px solid #40b3ff;
   border-radius: 50%;
@@ -1218,16 +1228,16 @@ select:after {
   align-items: center;
   justify-content: center;
 }
-.card .card-body .payment-type .types .type .logo,
-.card .card-body .payment-type .types .type p {
+.paymentForm .payment-type .types .type .logo,
+.paymentForm .payment-type .types .type p {
   transition: all 0.5s ease;
 }
-.card .card-body .payment-type .types .type .logo {
+.paymentForm .payment-type .types .type .logo {
   font-size: 48px;
   color: #8a959c;
   margin: auto;
 }
-.card .card-body .payment-type .types .type p {
+.paymentForm .payment-type .types .type p {
   margin-bottom: 0;
   font-size: 10px;
   text-transform: uppercase;
@@ -1235,32 +1245,24 @@ select:after {
   letter-spacing: 0.5px;
   color: #8a959c;
 }
-.card .card-body .payment-info .column {
+.paymentForm .payment-info .column {
   width: calc(50% - 25px);
   margin-top: 35px;
 }
 #cc.column.shipping {
-  margin-top: -75px;
+  margin-top: -55px;
 }
-.card .card-body .payment-info .title {
+.paymentForm .payment-info .title {
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-size: 18px;
+  font-family: "Brandon Text Regular";
 }
-.card .card-body .payment-info .title .num {
-  height: 24px;
-  width: 24px;
-  border-radius: 50%;
-  border: 2px solid #40b3ff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin-right: 12px;
-  font-size: 12px;
-}
-.card h4 {
-  margin-bottom: 10px;
+.paymentForm h4 {
+  padding: 20px 0 10px 0;
+  font-size: 18px;
+  font-family: "Brandon Text Regular";
 }
 
 #cc {
@@ -1273,28 +1275,27 @@ select:after {
 }
 .toReceipt {
   text-transform: uppercase;
-  font-weight: 600;
   font-size: 12px;
   letter-spacing: 0.5px;
   padding: 15px 25px;
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.5s ease;
-  border: 2px solid transparent;
   background: lightblue;
   border: 2px solid #e8ebed;
   color: #000;
   position: absolute;
-  right: 29%;
-  bottom: -25%;
+  right: 28%;
+  bottom: -8.5%;
+  /*   left: 43%; */
 }
 .toReceipt:hover {
-  background: var(--dark-blue);
+  background: var(--light-blue);
 }
 
 /* receipt */
 .receipt {
-  color: #fff;
+  color: #000;
   text-align: center;
 }
 .receipt h5,
