--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 
 /* --------- HERO SECTION -------- */
 .banner {
-  width: 20%;
+  width: 30%;
   height: auto;
   text-align: center;
   position: absolute;
@@ -108,7 +108,6 @@ body {
   transform: translate(-50%, -50%);
   z-index: 1;
   filter: drop-shadow(2px 4px 6px black);
-  /* opacity: 0.3; */
 }
 
 .video-container {
@@ -163,10 +162,12 @@ body {
 /* --------- INTRO -------- */
 .introTitle {
   text-transform: uppercase;
-  padding-top: 30px;
+  padding-top: 50px;
+  font-family: "Brandon Text Regular";
 }
 .introText {
   font-family: "Brandon Text Light";
+  font-size: 18px;
 }
 
 #introText {
@@ -982,6 +983,7 @@ select:after {
   width: min-content;
   left: 0;
   right: 0;
+  /* bottom: 10%; */
   margin: auto;
   border: 1px solid var(--dark-blue);
   border-radius: 5px;
