--- a/style.css
+++ b/style.css
@@ -255,18 +255,48 @@ body {
   /* padding: 2px 5px; */
   font-family: var(--main-font);
 }
+#timelineGrid {
+  display: grid;
+  grid-template-columns: 0.1fr 0.5fr 0.1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-areas:
+    "img1 vl ."
+    ". vl img2"
+    "img3 vl ."
+    ". vl img4"
+    "img5 vl .";
+}
 .vl {
-  border-left: 1px solid var(--light-blue);
-  height: 500px;
+  grid-area: vl;
+  border-left: 2px solid var(--light-blue);
+  height: 1250px;
   position: absolute;
   left: 50%;
-  margin-left: -3px;
-  top: 0;
+  margin-left: 0;
+  top: 75%;
 }
 .tripsTimelineImg {
-  width: 500px;
+  width: 300px;
   display: block;
   margin: auto;
+}
+.tripsTimelineImg:nth-of-type(1n) {
+  grid-area: img1;
+  margin: 60px 0 0 50px;
+}
+.tripsTimelineImg:nth-of-type(2n) {
+  grid-area: img2;
+}
+.tripsTimelineImg:nth-of-type(3n) {
+  grid-area: img3;
+  margin-left: 50px;
+}
+.tripsTimelineImg:nth-of-type(4n) {
+  grid-area: img4;
+}
+.tripsTimelineImg:nth-of-type(5n) {
+  grid-area: img5;
+  margin-left: 50px;
 }
 .readMoreTrip span {
   cursor: pointer;
